# riescue

./: .flake8  .gitignore  LICENSE  README  README.md  iss_cpu_config.json  pyproject.toml  run_sail_tests.sh  sail_config_override.json  setup.py
.github/: CONTRIBUTING.md  check-spdx.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: sail-ci.yml  smoke.yml  spdx.yml
docs/: ARCHITECTURE.md  README.md  build.py  container.md  lint.md
docs/public_source/: index.rst  overview.rst
docs/public_source/user_guides/: getting_started.rst  riescued_tutorial.rst
docs/source/: conf.py  index.rst  overview.rst
docs/source/api/: RiescueD.rst  index.rst
docs/source/internal/: internal_api.rst
docs/source/reference/: index.rst
docs/source/tutorials/: cpu_configuration.rst  develop.rst  index.rst  install.rst  riescue_intro_guide.rst
docs/source/user_guides/: cpu_configuration.rst  getting_started.rst  index.rst  modifying_end_of_test.rst  overview.rst  riescue_directives.rst  riescuec_user_guide.rst  riescued_tutorial.rst  riescued_user_guide.rst  rvcp_print_messages.rst  selfcheck.rst  test_headers.rst
docs/tt_source/: _static  index.rst  overview.rst  user_guides
docs/tt_source/internal/: internal_api.rst
infra/: Container.def  build_base_deps.sh  build_spike.sh  build_whisper.sh  container-build  container-pull  container-push  container-run
infra/container/: singularity-id
infra/singularity/: container.py
riescue/: __init__.py  ctk.py  riescuec.py  riescued.py
riescue/compliance/: README.md  __init__.py  base.py  bringup.py  cmdline.json  tp.py
riescue/compliance/config/: __init__.py  base_builder.py  bringup_case.py  bringup_cfg.py  experimental_toolchain.py  mode_cfg.py  resource.py  resource_builder.py  tp_builder.py  tp_cfg.py
riescue/compliance/lib/: common.py  config_manager.py  config_parser.py  extensions.py  fpgen_intf.py  groups.py  immediate.py  register_manager.py  riscv_imm_constraint_database.py  riscv_opcodes.py  riscv_registers.py  testcase.py  tree.py  vector_register_file.py  vqdot_translate.py
riescue/compliance/src/: comparator.py  instr_builder.py  instr_generator.py  riscv_instr_builder.py  riscv_instr_generator.py  riscv_instr_organizer.py  riscv_test_generator.py  test_generator.py
riescue/compliance/test_plan/: __init__.py  context.py  factory.py  generator.py
riescue/compliance/tests/: core_noldst_nobranch.json  rv64i_conditional_jumps.json  rv64i_unconditional_jumps.json  rv_riescuec.json
riescue/dtest_framework/: README.md  artifacts.py  cmdline.json  configure.py  featmanager.py  generator.py  parser.py  pool.py  trap_context.py  types.py
riescue/dtest_framework/config/: __init__.py  builder.py  candidate.py  cmdline.py  conf.py  cpu_config.py  featmanager.py  memory.py  pma_config.py
riescue/dtest_framework/generator/: __init__.py  assembly_writer.py  generator.py
riescue/dtest_framework/lib/: README_private_maps.md  act4_spike_cpu_config.json  act4_whisper_config.json  act4_whisper_cpu_config.json  basic_config.json  config.json  config_big_endian.json  config_no_va_pa_overlap.json  config_secure_0.json  config_secure_1.json  discrete_test.py  dtest_instruction_helper.py  memory.py  page_map.py  pagetables.py  pma.py  pma_generator.py  pmp.py  routines.py  rvmodel_macros_htif.h  rvmodel_macros_uart.h  sample.ld  sdtrig.py  smstateen_config.json  test_custom_mem_cpuconfig.json  twogb_dram_config.json  whisper_TP_ONLY_stateen_config.json  whisper_aplic_config.json  whisper_basic_config.json  whisper_config.json  whisper_config_privatecsr.json  whisper_secure_config.json  whisper_smstateen_config.json
riescue/dtest_framework/runtime/: __init__.py  assembly_generator.py  eot.py  hypervisor.py  loader.py  macros.py  opsys.py  runtime.py  selfcheck.py  syscalls.py  test_execution_logger.py  test_scheduler.py  trap_handler.py
riescue/dtest_framework/tests/: app_test.s  bf16.s  bfs.s  c_func.c  check_excp.s  cpu_config.json  cpu_config_aplic_imsic.json  cpu_config_mp_with_c.json  cpu_config_pma.json  cpu_config_secure.json  debug_discrete_test.s  dfs.s  dijkstras.s  end_test.s  exceptions.s  fact.s  fail_test.s  fail_test_mp.s  fib.s  floyd_warshall.s  htif_rvcp_fail_test.s  init_csr_test.s  interrupt_enabled_test.s  litmus_example.s  mp_2p.s  mp_2p_petersons.s  mp_5p.s  mp_5p_lr_sc.s  mp_5p_semaphore.s  mp_config.json  mp_par_5p.s  mp_par_5p_mode_default_test.s  mp_stack_test.s  mp_with_c.s  prim_tree.s  riescued_ld_test.s  skip_instr.s  svinval.s  test.s  test_alt_htif.s  (+19 more)
riescue/lib/: __init__.py  address.py  cli_base.py  cmdline.py  common.py  counters.py  enums.py  feature_discovery.py  intent_checker.py  intervals.py  json_argparse.py  logger.py  numgen.py  rand.py  raw_attributes.py  register.py  register_format.py
riescue/lib/csr_manager/: csr_config.json  csr_manager_config.py  csr_manager_interface.py
riescue/lib/instr_info/: README.md  RiscvIMABFV.xlsx  cache_merge.py  groups_to_instruction_names.json  instr_dict.yaml  instr_lookup_json.py  instr_query_dict.json  rva23.json  rva23.py  supplementary_instr_dict.yaml
riescue/lib/toolchain/: __init__.py  exceptions.py  sail.py  tool.py  toolchain.py  whisper.py
tests/: foo_test.py
tests/cli_tests/ctk/: basic_test.py
tests/cli_tests/riescuec/: act4_config_test.py  (+51 more)
tests/lib/: feature_discovery_test.py  numgen_test.py  rand_test.py
tp_gen/: features.csv  generate_tp_tests.sh
(+489 files in other folders)
