[tool.black]
line-length = 200
workers = 8
exclude = "/(.git|riscv-dv|riscv-isa-sim|whisper|fpgen|riescue_config|.*_clone|opensrc.*|.*-scripts|.venv)/"


[build-system]
requires = ["setuptools >= 64.0.3", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riescue"
version = "1.1.2"
description = "RISC-V Directed Test Framework and Compliance Suite"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "sortedcontainers",
    "pyyaml",
    "numpy",
    "sphinx>=7.4.0",
    "sphinx-rtd-theme",
    "flake8",
    "black==25.1.0",
    "intervaltree",
    "coverage",
    "pyright[nodejs]",
    "coretp @ git+https://git@github.com/tenstorrent/riscv-coretp@0424d547e34229eccedf92612d6d43041380a46f",
]

[tool.setuptools.package-dir]
riescue = "riescue/"

[project.scripts]
riescued = "riescue.riescued:main"
riescuec = "riescue.riescuec:main"
ctk = "riescue.ctk:main"

[tool.pyright]
include = [
    "riescue/lib",
    "riescue/*.py",

    # RiescueD files
    #"riescue/dtest_framework",
    "riescue/dtest_framework/config",
    "riescue/dtest_framework/runtime",
    "tests/dtest_framework",
    "riescue/dtest_framework/pool.py",
    "riescue/dtest_framework/lib/pagetables.py",
    "riescue/dtest_framework/lib/page_map.py",

    # RiescueC files
    "riescue/compliance/*.py",
    "riescue/compliance/config",
    "riescue/compliance/src",
    "riescue/compliance/test_plan",
]

typeCheckingMode = "standard"
# typeCheckingMode = "strict" # add this in the future


extraPaths = ["riescue",]
exclude = [
    "tests/compliance",
]
pythonVersion = "3.9"
pythonPlatform = "Linux"