[tool.black]
line-length = 200
workers = 8
exclude = "/(.git|riscv-dv|riscv-isa-sim|whisper|fpgen|riescue_config|.*_clone|opensrc.*|.*-scripts|.venv)/"


[build-system]
requires = ["setuptools >= 64.0.3", "pip", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riescue"
version = "1.2.0"
description = "RISC-V Directed Test Framework and Compliance Suite"
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "sortedcontainers",
    "pyyaml",
    "numpy",
    "sphinx>=7.4.0",
    "sphinx-rtd-theme",
    "flake8",
    "black==25.1.0",
    "intervaltree",
    "coverage",
    "pyright[nodejs]",
    "coretp @ git+https://git@github.com/tenstorrent/riscv-coretp@914d5e8c97299fb59eb935a71d7414b17d03f6d7",
]

[tool.setuptools.package-dir]
riescue = "riescue/"

[project.scripts]
riescued = "riescue.riescued:main"
riescuec = "riescue.riescuec:main"
ctk = "riescue.ctk:main"

[tool.pyright]
include = [
    "riescue/lib",
    "riescue/*.py",

    # RiescueD files
    "riescue/dtest_framework",
    "tests/dtest_framework",

    # RiescueC files
    "riescue/compliance/*.py",
    "riescue/compliance/config",
    "riescue/compliance/src",
    "riescue/compliance/test_plan",
]

typeCheckingMode = "standard"
# typeCheckingMode = "strict" # add this in the future
# Might be easier long term to add strict mode to certain files overtime:
# https://github.com/microsoft/pyright/discussions/4715


extraPaths = ["riescue",]
exclude = [
    "tests/compliance",
    "riescue/dtest_framework/generator/generator.py", #FIXME: Remove this once generator gets fixed up
]
pythonVersion = "3.9"
pythonPlatform = "Linux"